[package]

name = "typedef"
version = "0.0.2"
authors = [ "Nerijus Arlauskas <nercury@gmail.com>" ]

documentation = "http://nercury.github.io/typedef-rs/typedef/index.html"
repository = "https://github.com/Nercury/typedef-rs"

readme = "README.md"

keywords = [
    "types", "typeid", "runtime", "dynamic", "typing"
]

license = "MIT"

description = "Identify, compare types or print type names."

[profile.dev]
opt-level = 1  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes -g or `--cfg ndebug`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false

# The documentation profile, used for `cargo doc`
[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
